--- a/Week1/homework/mysql-exercises/Create-and-insert-queries/package.json
+++ b/Week1/homework/mysql-exercises/Create-and-insert-queries/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "random-date-generator": "^1.0.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
